--- a/css/app.css
+++ b/css/app.css
@@ -47,16 +47,20 @@ body {
     color: #00a3cf;
 }
 
+.region__list-unit {
+    line-height: 45px;
+}
+
 .number {
     background-color: #ea3556;
     color: #fff;
     display: inline-block;
     border-radius: 50%;
     margin: 0 5px;
-    width: 40px;
+    width: 50px;
     height: 40px;
     line-height: 40px;
-    font-size: 18px;
+    font-size: 17px;
     text-align: center;
 }
 
@@ -70,8 +74,6 @@ body {
 }
 input {
     margin-left: 5px;
-    /* display: block; */
-    /* width: 100%; */
     height: 20px;
     padding: 5px;
     font-size: 14px;
