--- a/css/app.css
+++ b/css/app.css
@@ -38,6 +38,7 @@ body {
 .number {
     background-color: #ea3556;
     color: #fff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     display: inline-block;
     border-radius: 50%;
     margin: 0 5px;
@@ -72,6 +73,7 @@ body {
 .header__input--goal {
     width: 50px;
 }
+
 input {
     margin-left: 5px;
     height: 20px;
